# focus-nexus

./: CMakeLists.txt  Makefile  README.md  build.bat  build.sh  build_with_libraries.bat  build_with_libraries.sh
docs/: COMPILATION_GUIDE.md  COMPLETE_LIBRARY_GUIDE.md  EXTENSIBILITY_GUIDE.md  LIBRARY_API_REFERENCE.md  LIBRARY_INTEGRATION.md
examples/: control_flow.py  functions.py  hello.py  interactive.py  library_integration_demo.fn
examples/cpp_library/: math_lib.cpp
examples/custom_plugin/: my_plugin.cpp
examples/java_library/: AdvancedMathUtils.java  MathUtils.java
examples/python_library/: advanced_math.py  math_module.py
src/: interpreter.cpp  interpreter.hpp  main.cpp
src/error/: error_handler.cpp  error_handler.hpp  exceptions.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast.hpp  ast_printer.cpp  parser.cpp  parser.hpp
src/runtime/: callable.cpp  callable.hpp  environment.cpp  environment.hpp  library_manager.cpp  library_manager.hpp  native_functions.cpp  native_functions.hpp  value.cpp  value.hpp
src/utils/: file_utils.cpp  file_utils.hpp  string_utils.cpp  string_utils.hpp
tests/examples/: advanced_features.fn  calculator.fn  conditionals.fn  fibonacci.fn  functions.fn  hello_world.fn  import_demo.fn  loops.fn  variables.fn
tests/library_integration/: test_all_libraries.fn  test_cpp_library.fn  test_custom_plugin.fn  test_java_library.fn  test_python_library.fn
